--- a/oxalis-outbound/src/main/resources/reference.conf
+++ b/oxalis-outbound/src/main/resources/reference.conf
@@ -2,3 +2,6 @@ oxalis.module.outbound.lookup.class = network.oxalis.outbound.lookup.LookupModul
 oxalis.module.outbound.transmission.class = network.oxalis.outbound.transmission.TransmissionModule
 
 mode.default.oxalis.lookup.service = cached
+
+# Locator 
+mode.default.lookup.locator.hostname="showka"
