--- a/oxalis-outbound/src/main/resources/reference.conf
+++ b/oxalis-outbound/src/main/resources/reference.conf
@@ -1,7 +1,7 @@
 oxalis.module.outbound.lookup.class = network.oxalis.outbound.lookup.LookupModule
 oxalis.module.outbound.transmission.class = network.oxalis.outbound.transmission.TransmissionModule
 
-mode.default.oxalis.lookup.service = cached
 
-# Locator 
-mode.default.lookup.locator.hostname="showka"
+# Locator = SML URL?
+mode.default.oxalis.lookup.service = default
+mode.default.lookup.locator.hostname="sml.test"
